// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Landing Renders correctly 1`] = `
<div>
  <div
    class="MuiContainer-root-5 WithStyles(ForwardRef(Container))-root-4 MuiContainer-maxWidthLg-11"
  >
    <div
      class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-justify-content-xs-center-31"
    >
      <div
        class="MuiGrid-root-13 WithStyles(ForwardRef(Grid))-root-116 WithStyles(ForwardRef(Grid))-root-117 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-align-items-xs-center-22 MuiGrid-grid-xs-12-59"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-10-57 MuiGrid-grid-md-6-81"
        >
          <div
            class="makeStyles-headerContainer-118"
          >
            <h6
              class="MuiTypography-root-119 MuiTypography-h6-129 MuiTypography-colorTextPrimary-144"
            >
              Test Bitcoin Strategies
            </h6>
            <p
              class="MuiTypography-root-119 MuiTypography-body2-120 MuiTypography-colorTextSecondary-145"
            >
              Snapshots are great. Landing looks good.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-13 makeStyles-root-157 MuiGrid-container-14 MuiGrid-item-15"
    >
      <div
        class="MuiGrid-root-13 makeStyles-titlesContainer-158 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15 MuiGrid-align-items-xs-center-22 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-10-85 MuiGrid-grid-lg-true-89"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
        >
          <div
            class="MuiGrid-root-13 makeStyles-title-150 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-align-items-xs-center-22 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-5-80 MuiGrid-grid-lg-4-93"
          >
            <p
              class="MuiTypography-root-119 makeStyles-title-150 MuiTypography-body2-120 MuiTypography-colorTextSecondary-145"
            >
              Vaults
            </p>
            <img
              alt="List description"
              class="makeStyles-sortInfoIcon-152"
              color="primary"
              src="/assets/icons/vault-sort-info.svg"
              title="A vault is a smart contract which hold specific tokens. It secures your crypto, while making your money work (e.g. rewards, APR...)"
            />
          </div>
          <div
            class="MuiGrid-root-13 makeStyles-title-150 makeStyles-columnTitle-155 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-align-items-xs-center-22 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-true-75"
          >
            <p
              class="MuiTypography-root-119 MuiTypography-body2-120 MuiTypography-colorTextSecondary-145"
            >
              APY
            </p>
            <img
              alt="What is APR?"
              class="makeStyles-sortInfoIcon-152"
              color="primary"
              src="/assets/icons/vault-sort-info.svg"
              title="An annual percentage yield (APY), is the yearly rate earned by depositing in each vault."
            />
            <button
              aria-label="sort descending by APR"
              class="MuiButtonBase-root-182 MuiIconButton-root-173 makeStyles-sortIcon-151 makeStyles-nonSetSort-153"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label-181"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-185 MuiSvgIcon-colorPrimary-186"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-361"
              />
            </button>
          </div>
          <div
            class="MuiGrid-root-13 makeStyles-title-150 makeStyles-columnTitle-155 makeStyles-tvlColumn-156 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-align-items-xs-center-22 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-true-75"
          >
            <p
              class="MuiTypography-root-119 MuiTypography-body2-120 MuiTypography-colorTextSecondary-145"
            >
              TVL
            </p>
            <img
              alt="What is TVL?"
              class="makeStyles-sortInfoIcon-152"
              color="primary"
              src="/assets/icons/vault-sort-info.svg"
              title="Total value locked (TVL) represents the dollar value of all the assets staked in each vault."
            />
            <button
              aria-label="sort descending by TVL"
              class="MuiButtonBase-root-182 MuiIconButton-root-173 makeStyles-sortIcon-151 makeStyles-nonSetSort-153"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label-181"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-185 MuiSvgIcon-colorPrimary-186"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-361"
              />
            </button>
          </div>
          <div
            class="MuiGrid-root-13 makeStyles-title-150 makeStyles-columnTitle-155 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-align-items-xs-center-22 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-true-75"
          >
            <p
              class="MuiTypography-root-119 MuiTypography-body2-120 MuiTypography-colorTextSecondary-145"
            >
              MY DEPOSITS
            </p>
            <img
              alt="What represent My Deposits?"
              class="makeStyles-sortInfoIcon-152"
              color="primary"
              src="/assets/icons/vault-sort-info.svg"
              title="Represents the dollar value of all assets you deposited in each vault"
            />
            <button
              aria-label="sort descending by balance"
              class="MuiButtonBase-root-182 MuiIconButton-root-173 makeStyles-sortIcon-151 makeStyles-nonSetSort-153"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label-181"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-185 MuiSvgIcon-colorPrimary-186"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-361"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-justify-content-xs-flex-end-32 MuiGrid-grid-md-true-75"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-align-items-xs-center-22 MuiGrid-justify-content-xs-flex-end-32"
        >
          <button
            aria-label="Open Vaults Filters"
            class="MuiButtonBase-root-182 MuiIconButton-root-173 makeStyles-filterButton-203"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-181"
            >
              <img
                alt="vault filters"
                src="/assets/icons/vault-filters.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-361"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-263 MuiCard-root-262 MuiGrid-root-13 makeStyles-root-237 makeStyles-enabledVault-238 MuiGrid-container-14 MuiPaper-elevation1-267 MuiPaper-rounded-264"
    >
      <div
        class="MuiGrid-root-13 makeStyles-clickableSection-240 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-10-85 MuiGrid-grid-lg-true-89"
      >
        <div
          class="MuiGrid-root-13 makeStyles-iconBadgeContainer-255 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-direction-xs-column-17 MuiGrid-justify-content-xs-center-31 MuiGrid-grid-xs-auto-46"
        >
          <div
            class="MuiGrid-root-13 makeStyles-iconContainer-259 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
          >
            <div
              class="makeStyles-root-291"
            >
              <img
                alt="curve-renBTC-wBTC-sBTC logo"
                class="makeStyles-position-292"
                src="/assets/icons/curve-renbtc-wbtc-sbtc.svg"
              />
            </div>
          </div>
          <div
            class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
          >
            <span
              class="MuiTypography-root-119 makeStyles-behavior-243 MuiTypography-caption-122"
            >
              Ecosystem Helper
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-4-39 MuiGrid-item-15 MuiGrid-grid-xs-12-59"
          >
            <div
              class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-5-80 MuiGrid-grid-lg-4-93"
            >
              <h6
                class="MuiTypography-root-119 makeStyles-vaultName-257 MuiTypography-subtitle1-130"
              >
                Convex
                 - 
                Curve.fi renBTC/wBTC/sBTC
              </h6>
            </div>
            <div
              class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-true-75"
            >
              <p
                class="MuiTypography-root-119 makeStyles-apr-293 MuiTypography-body1-121 MuiTypography-colorTextPrimary-144"
              >
                0.25%
              </p>
            </div>
            <div
              class="MuiGrid-root-13 makeStyles-tvl-244 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-true-75"
            >
              <div
                class="MuiBox-root-297 MuiBox-root-298"
              >
                <p
                  class="MuiTypography-root-119 makeStyles-itemText-242 MuiTypography-body1-121"
                />
              </div>
            </div>
            <div
              class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-true-75"
            >
              <div
                class="MuiBox-root-297 MuiBox-root-302"
              >
                <p
                  class="MuiTypography-root-119 makeStyles-itemText-242 MuiTypography-body1-121"
                >
                  $-
                </p>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-4-39 MuiGrid-item-15 MuiGrid-grid-xs-12-59"
          >
            <div
              class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-5-80 MuiGrid-grid-lg-4-93"
            >
              <p
                class="MuiTypography-root-119 makeStyles-thinFont-256 MuiTypography-body1-121 MuiTypography-colorTextSecondary-145"
              >
                Non-boosted
              </p>
            </div>
            <div
              class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-5-80 MuiGrid-grid-lg-8-97"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-13 makeStyles-nonClickableSection-241 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-true-75"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-justify-content-xs-center-31"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-item-15"
          >
            <button
              class="MuiButtonBase-root-182 MuiButton-root-306 MuiButton-outlined-311 makeStyles-button-303 MuiButton-outlinedPrimary-312 MuiButton-disabled-319 WithStyles(ForwardRef(Button))-disabled-305 MuiButtonBase-disabled-183"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-307"
              >
                Deposit
              </span>
            </button>
          </div>
          <div
            class="MuiGrid-root-13 MuiGrid-item-15"
          >
            <button
              class="MuiButtonBase-root-182 MuiButton-root-306 MuiButton-contained-314 makeStyles-button-303 MuiButton-containedPrimary-315 MuiButton-disabled-319 WithStyles(ForwardRef(Button))-disabled-305 MuiButtonBase-disabled-183"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-307"
              >
                Withdraw
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-263 MuiCard-root-262 MuiGrid-root-13 makeStyles-root-237 makeStyles-enabledVault-238 MuiGrid-container-14 MuiPaper-elevation1-267 MuiPaper-rounded-264"
    >
      <div
        class="MuiGrid-root-13 makeStyles-clickableSection-240 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-10-85 MuiGrid-grid-lg-true-89"
      >
        <div
          class="MuiGrid-root-13 makeStyles-iconBadgeContainer-255 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-direction-xs-column-17 MuiGrid-justify-content-xs-center-31 MuiGrid-grid-xs-auto-46"
        >
          <div
            class="MuiGrid-root-13 makeStyles-iconContainer-259 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
          >
            <div
              class="makeStyles-root-291"
            >
              <img
                alt="BADGER logo"
                class="makeStyles-position-347"
                src="/assets/icons/badger.svg"
              />
            </div>
          </div>
          <div
            class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
          >
            <span
              class="MuiTypography-root-119 makeStyles-behavior-243 MuiTypography-caption-122"
            >
              DCA
            </span>
          </div>
        </div>
        <div
          class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-4-39 MuiGrid-item-15 MuiGrid-grid-xs-12-59"
          >
            <div
              class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-5-80 MuiGrid-grid-lg-4-93"
            >
              <h6
                class="MuiTypography-root-119 makeStyles-vaultName-257 MuiTypography-subtitle1-130"
              >
                Badger
                 - 
                Badger
              </h6>
            </div>
            <div
              class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-true-75"
            >
              <p
                class="MuiTypography-root-119 makeStyles-apr-293 MuiTypography-body1-121 MuiTypography-colorTextPrimary-144"
              >
                8.17%
              </p>
            </div>
            <div
              class="MuiGrid-root-13 makeStyles-tvl-244 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-true-75"
            >
              <div
                class="MuiBox-root-297 MuiBox-root-350"
              >
                <p
                  class="MuiTypography-root-119 makeStyles-itemText-242 MuiTypography-body1-121"
                />
              </div>
            </div>
            <div
              class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-true-75"
            >
              <div
                class="MuiBox-root-297 MuiBox-root-353"
              >
                <p
                  class="MuiTypography-root-119 makeStyles-itemText-242 MuiTypography-body1-121"
                >
                  $-
                </p>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-4-39 MuiGrid-item-15 MuiGrid-grid-xs-12-59"
          >
            <div
              class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-5-80 MuiGrid-grid-lg-4-93"
            >
              <p
                class="MuiTypography-root-119 makeStyles-thinFont-256 MuiTypography-body1-121 MuiTypography-colorTextSecondary-145"
              >
                Non-boosted
              </p>
            </div>
            <div
              class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-5-80 MuiGrid-grid-lg-8-97"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-13 makeStyles-nonClickableSection-241 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-true-75"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-justify-content-xs-center-31"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-item-15"
          >
            <button
              class="MuiButtonBase-root-182 MuiButton-root-306 MuiButton-outlined-311 makeStyles-button-303 MuiButton-outlinedPrimary-312 MuiButton-disabled-319 WithStyles(ForwardRef(Button))-disabled-305 MuiButtonBase-disabled-183"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-307"
              >
                Deposit
              </span>
            </button>
          </div>
          <div
            class="MuiGrid-root-13 MuiGrid-item-15"
          >
            <button
              class="MuiButtonBase-root-182 MuiButton-root-306 MuiButton-contained-314 makeStyles-button-303 MuiButton-containedPrimary-315 MuiButton-disabled-319 WithStyles(ForwardRef(Button))-disabled-305 MuiButtonBase-disabled-183"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-307"
              >
                Withdraw
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-263 MuiCard-root-262 MuiGrid-root-13 makeStyles-root-237 makeStyles-enabledVault-238 MuiGrid-container-14 MuiPaper-elevation1-267 MuiPaper-rounded-264"
    >
      <div
        class="MuiGrid-root-13 makeStyles-clickableSection-240 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-10-85 MuiGrid-grid-lg-true-89"
      >
        <div
          class="MuiGrid-root-13 makeStyles-iconBadgeContainer-255 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-direction-xs-column-17 MuiGrid-justify-content-xs-center-31 MuiGrid-grid-xs-auto-46"
        >
          <div
            class="MuiGrid-root-13 makeStyles-iconContainer-259 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
          >
            <div
              class="makeStyles-root-291"
            >
              <img
                alt="DIGG logo"
                class="makeStyles-position-354"
                src="/assets/icons/digg.svg"
              />
            </div>
          </div>
          <div
            class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
          />
        </div>
        <div
          class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-4-39 MuiGrid-item-15 MuiGrid-grid-xs-12-59"
          >
            <div
              class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-5-80 MuiGrid-grid-lg-4-93"
            >
              <h6
                class="MuiTypography-root-119 makeStyles-vaultName-257 MuiTypography-subtitle1-130"
              >
                Badger
                 - 
                Digg
              </h6>
            </div>
            <div
              class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-true-75"
            >
              <p
                class="MuiTypography-root-119 makeStyles-apr-293 MuiTypography-body1-121 MuiTypography-colorTextPrimary-144"
              >
                8.17%
              </p>
            </div>
            <div
              class="MuiGrid-root-13 makeStyles-tvl-244 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-true-75"
            >
              <div
                class="MuiBox-root-297 MuiBox-root-357"
              >
                <p
                  class="MuiTypography-root-119 makeStyles-itemText-242 MuiTypography-body1-121"
                />
              </div>
            </div>
            <div
              class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-true-75"
            >
              <div
                class="MuiBox-root-297 MuiBox-root-360"
              >
                <p
                  class="MuiTypography-root-119 makeStyles-itemText-242 MuiTypography-body1-121"
                >
                  $-
                </p>
              </div>
            </div>
          </div>
          <div
            class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-4-39 MuiGrid-item-15 MuiGrid-grid-xs-12-59"
          >
            <div
              class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-5-80 MuiGrid-grid-lg-4-93"
            >
              <p
                class="MuiTypography-root-119 makeStyles-thinFont-256 MuiTypography-body1-121 MuiTypography-colorTextSecondary-145"
              >
                Non-boosted
              </p>
            </div>
            <div
              class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-5-80 MuiGrid-grid-lg-8-97"
            />
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-13 makeStyles-nonClickableSection-241 MuiGrid-item-15 MuiGrid-grid-xs-12-59 MuiGrid-grid-md-true-75"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-justify-content-xs-center-31"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-item-15"
          >
            <button
              class="MuiButtonBase-root-182 MuiButton-root-306 MuiButton-outlined-311 makeStyles-button-303 MuiButton-outlinedPrimary-312 MuiButton-disabled-319 WithStyles(ForwardRef(Button))-disabled-305 MuiButtonBase-disabled-183"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-307"
              >
                Deposit
              </span>
            </button>
          </div>
          <div
            class="MuiGrid-root-13 MuiGrid-item-15"
          >
            <button
              class="MuiButtonBase-root-182 MuiButton-root-306 MuiButton-contained-314 makeStyles-button-303 MuiButton-containedPrimary-315 MuiButton-disabled-319 WithStyles(ForwardRef(Button))-disabled-305 MuiButtonBase-disabled-183"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-307"
              >
                Withdraw
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Landing Renders mobile version correctly 1`] = `
<div>
  <div
    class="MuiContainer-root-5 WithStyles(ForwardRef(Container))-root-4 MuiContainer-maxWidthLg-11"
  >
    <div
      class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-justify-content-xs-center-31"
    >
      <div
        class="MuiGrid-root-13 WithStyles(ForwardRef(Grid))-root-116 WithStyles(ForwardRef(Grid))-root-117 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-align-items-xs-center-22 MuiGrid-grid-xs-12-59"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-10-57 MuiGrid-grid-md-6-81"
        >
          <div
            class="makeStyles-headerContainer-118"
          >
            <h6
              class="MuiTypography-root-119 MuiTypography-h6-129 MuiTypography-colorTextPrimary-144"
            >
              Test Bitcoin Strategies
            </h6>
            <p
              class="MuiTypography-root-119 MuiTypography-body2-120 MuiTypography-colorTextSecondary-145"
            >
              Snapshots are great. Landing looks good.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-13 MuiGrid-container-14"
    >
      <div
        class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-align-items-xs-center-22 MuiGrid-grid-xs-10-57"
      >
        <p
          class="MuiTypography-root-119 makeStyles-badgerOverviewValueText-2 makeStyles-badgerOverviewValueTitle-1 MuiTypography-body2-120"
        >
          My Assets:
        </p>
        <div
          class="MuiBox-root-297 MuiBox-root-363"
        >
          <p
            class="MuiTypography-root-119 makeStyles-badgerOverviewValueText-2 MuiTypography-body2-120"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root-13 makeStyles-filterWidgetContainer-3 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-grid-xs-2-49"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-align-items-xs-center-22 MuiGrid-justify-content-xs-flex-end-32"
        >
          <button
            aria-label="Open Vaults Filters"
            class="MuiButtonBase-root-182 MuiIconButton-root-173 makeStyles-filterButton-203"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-181"
            >
              <img
                alt="vault filters"
                src="/assets/icons/vault-filters.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-392"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-13 makeStyles-mobileContainer-159 MuiGrid-container-14 MuiGrid-justify-content-xs-space-between-33"
    >
      <div
        class="MuiGrid-root-13 makeStyles-mobileColumn-160 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-align-items-xs-center-22 MuiGrid-grid-xs-6-53"
      >
        <p
          class="MuiTypography-root-119 makeStyles-title-150 MuiTypography-body2-120 MuiTypography-colorTextSecondary-145 MuiTypography-displayInline-147"
        >
          Vaults
        </p>
        <img
          alt="List description"
          class="makeStyles-sortInfoIcon-152"
          color="primary"
          src="/assets/icons/vault-sort-info.svg"
          title="A vault is a smart contract which hold specific tokens. It secures your crypto, while making your money work (e.g. rewards, APR...)"
        />
      </div>
      <div
        class="MuiGrid-root-13 makeStyles-mobileColumn-160 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-align-items-xs-center-22 MuiGrid-justify-content-xs-flex-end-32 MuiGrid-grid-xs-6-53"
      >
        <p
          class="MuiTypography-root-119 makeStyles-title-150 MuiTypography-body2-120 MuiTypography-colorTextSecondary-145"
        >
          APR
        </p>
        <img
          alt="What is APR?"
          class="makeStyles-sortInfoIcon-152"
          color="primary"
          src="/assets/icons/vault-sort-info.svg"
          title="An annual percentage rate (APR), is the yearly rate earned by staking in each vault."
        />
      </div>
    </div>
    <div
      class="MuiPaper-root-263 MuiCard-root-262 MuiGrid-root-13 makeStyles-mobileContainer-252 MuiGrid-container-14 MuiPaper-elevation1-267 MuiPaper-rounded-264"
    >
      <div
        class="MuiGrid-root-13 makeStyles-nameAndAprMobile-250 MuiGrid-container-14 MuiGrid-spacing-xs-2-37"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-12-59"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-container-14"
          >
            <div
              class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-align-items-xs-center-22"
            >
              <div
                class="MuiGrid-root-13 MuiGrid-grid-xs-auto-46"
              >
                <div
                  class="makeStyles-root-291"
                >
                  <img
                    alt="curve-renBTC-wBTC-sBTC logo"
                    class="makeStyles-position-364"
                    src="/assets/icons/curve-renbtc-wbtc-sbtc.svg"
                  />
                </div>
              </div>
              <div
                class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-direction-xs-column-17 MuiGrid-grid-xs-7-54"
              >
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15"
                />
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15"
                >
                  <span
                    class="MuiTypography-root-119 makeStyles-behavior-243 MuiTypography-caption-122"
                  >
                    Ecosystem Helper
                  </span>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-13 makeStyles-vaultNameMobile-258 MuiGrid-container-14 MuiGrid-direction-xs-column-17"
            >
              <div
                class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15"
              >
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-7-54"
                >
                  <h6
                    class="MuiTypography-root-119 makeStyles-vaultName-257 MuiTypography-subtitle1-130"
                  >
                    Convex
                     - 
                    Curve.fi renBTC/wBTC/sBTC
                  </h6>
                </div>
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
                >
                  <p
                    class="MuiTypography-root-119 makeStyles-apr-293 MuiTypography-body1-121 MuiTypography-colorTextPrimary-144"
                  >
                    0.25%
                  </p>
                </div>
              </div>
              <div
                class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15"
              >
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-7-54"
                >
                  <p
                    class="MuiTypography-root-119 makeStyles-thinFont-256 MuiTypography-body1-121 MuiTypography-colorTextSecondary-145"
                  >
                    Non-boosted
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root-365 makeStyles-divider-247"
      />
      <div
        class="MuiGrid-root-13 makeStyles-amountsSection-248 MuiGrid-container-14"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-6-53"
        >
          <p
            class="MuiTypography-root-119 makeStyles-amountsMobile-251 MuiTypography-body1-121 MuiTypography-displayInline-147"
          >
            TVL: 
          </p>
          <div
            class="MuiBox-root-297 MuiBox-root-374"
          >
            <p
              class="MuiTypography-root-119 makeStyles-amountsMobile-251 MuiTypography-body1-121"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
        >
          <p
            class="MuiTypography-root-119 makeStyles-amountsMobile-251 MuiTypography-body1-121 MuiTypography-displayInline-147"
          >
            My Deposits: 
          </p>
          <div
            class="MuiBox-root-297 MuiBox-root-377"
          >
            <p
              class="MuiTypography-root-119 makeStyles-amountsMobile-251 MuiTypography-body1-121"
            >
              $-
            </p>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root-365 makeStyles-divider-247"
      />
      <div
        class="MuiGrid-root-13 makeStyles-actionButtonsMobile-249 MuiGrid-container-14"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-justify-content-xs-center-31"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-item-15"
          >
            <button
              class="MuiButtonBase-root-182 MuiButton-root-306 MuiButton-outlined-311 makeStyles-button-303 MuiButton-outlinedPrimary-312 MuiButton-disabled-319 WithStyles(ForwardRef(Button))-disabled-305 MuiButtonBase-disabled-183"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-307"
              >
                Deposit
              </span>
            </button>
          </div>
          <div
            class="MuiGrid-root-13 MuiGrid-item-15"
          >
            <button
              class="MuiButtonBase-root-182 MuiButton-root-306 MuiButton-contained-314 makeStyles-button-303 MuiButton-containedPrimary-315 MuiButton-disabled-319 WithStyles(ForwardRef(Button))-disabled-305 MuiButtonBase-disabled-183"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-307"
              >
                Withdraw
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-263 MuiCard-root-262 MuiGrid-root-13 makeStyles-mobileContainer-252 MuiGrid-container-14 MuiPaper-elevation1-267 MuiPaper-rounded-264"
    >
      <div
        class="MuiGrid-root-13 makeStyles-nameAndAprMobile-250 MuiGrid-container-14 MuiGrid-spacing-xs-2-37"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-12-59"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-container-14"
          >
            <div
              class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-align-items-xs-center-22"
            >
              <div
                class="MuiGrid-root-13 MuiGrid-grid-xs-auto-46"
              >
                <div
                  class="makeStyles-root-291"
                >
                  <img
                    alt="BADGER logo"
                    class="makeStyles-position-378"
                    src="/assets/icons/badger.svg"
                  />
                </div>
              </div>
              <div
                class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-direction-xs-column-17 MuiGrid-grid-xs-7-54"
              >
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15"
                />
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15"
                >
                  <span
                    class="MuiTypography-root-119 makeStyles-behavior-243 MuiTypography-caption-122"
                  >
                    DCA
                  </span>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-13 makeStyles-vaultNameMobile-258 MuiGrid-container-14 MuiGrid-direction-xs-column-17"
            >
              <div
                class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15"
              >
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-7-54"
                >
                  <h6
                    class="MuiTypography-root-119 makeStyles-vaultName-257 MuiTypography-subtitle1-130"
                  >
                    Badger
                     - 
                    Badger
                  </h6>
                </div>
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
                >
                  <p
                    class="MuiTypography-root-119 makeStyles-apr-293 MuiTypography-body1-121 MuiTypography-colorTextPrimary-144"
                  >
                    8.17%
                  </p>
                </div>
              </div>
              <div
                class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15"
              >
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-7-54"
                >
                  <p
                    class="MuiTypography-root-119 makeStyles-thinFont-256 MuiTypography-body1-121 MuiTypography-colorTextSecondary-145"
                  >
                    Non-boosted
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root-365 makeStyles-divider-247"
      />
      <div
        class="MuiGrid-root-13 makeStyles-amountsSection-248 MuiGrid-container-14"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-6-53"
        >
          <p
            class="MuiTypography-root-119 makeStyles-amountsMobile-251 MuiTypography-body1-121 MuiTypography-displayInline-147"
          >
            TVL: 
          </p>
          <div
            class="MuiBox-root-297 MuiBox-root-381"
          >
            <p
              class="MuiTypography-root-119 makeStyles-amountsMobile-251 MuiTypography-body1-121"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
        >
          <p
            class="MuiTypography-root-119 makeStyles-amountsMobile-251 MuiTypography-body1-121 MuiTypography-displayInline-147"
          >
            My Deposits: 
          </p>
          <div
            class="MuiBox-root-297 MuiBox-root-384"
          >
            <p
              class="MuiTypography-root-119 makeStyles-amountsMobile-251 MuiTypography-body1-121"
            >
              $-
            </p>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root-365 makeStyles-divider-247"
      />
      <div
        class="MuiGrid-root-13 makeStyles-actionButtonsMobile-249 MuiGrid-container-14"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-justify-content-xs-center-31"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-item-15"
          >
            <button
              class="MuiButtonBase-root-182 MuiButton-root-306 MuiButton-outlined-311 makeStyles-button-303 MuiButton-outlinedPrimary-312 MuiButton-disabled-319 WithStyles(ForwardRef(Button))-disabled-305 MuiButtonBase-disabled-183"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-307"
              >
                Deposit
              </span>
            </button>
          </div>
          <div
            class="MuiGrid-root-13 MuiGrid-item-15"
          >
            <button
              class="MuiButtonBase-root-182 MuiButton-root-306 MuiButton-contained-314 makeStyles-button-303 MuiButton-containedPrimary-315 MuiButton-disabled-319 WithStyles(ForwardRef(Button))-disabled-305 MuiButtonBase-disabled-183"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-307"
              >
                Withdraw
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-263 MuiCard-root-262 MuiGrid-root-13 makeStyles-mobileContainer-252 MuiGrid-container-14 MuiPaper-elevation1-267 MuiPaper-rounded-264"
    >
      <div
        class="MuiGrid-root-13 makeStyles-nameAndAprMobile-250 MuiGrid-container-14 MuiGrid-spacing-xs-2-37"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-12-59"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-container-14"
          >
            <div
              class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-align-items-xs-center-22"
            >
              <div
                class="MuiGrid-root-13 MuiGrid-grid-xs-auto-46"
              >
                <div
                  class="makeStyles-root-291"
                >
                  <img
                    alt="DIGG logo"
                    class="makeStyles-position-385"
                    src="/assets/icons/digg.svg"
                  />
                </div>
              </div>
              <div
                class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-direction-xs-column-17 MuiGrid-grid-xs-7-54"
              >
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15"
                />
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15"
                />
              </div>
            </div>
            <div
              class="MuiGrid-root-13 makeStyles-vaultNameMobile-258 MuiGrid-container-14 MuiGrid-direction-xs-column-17"
            >
              <div
                class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15"
              >
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-7-54"
                >
                  <h6
                    class="MuiTypography-root-119 makeStyles-vaultName-257 MuiTypography-subtitle1-130"
                  >
                    Badger
                     - 
                    Digg
                  </h6>
                </div>
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
                >
                  <p
                    class="MuiTypography-root-119 makeStyles-apr-293 MuiTypography-body1-121 MuiTypography-colorTextPrimary-144"
                  >
                    8.17%
                  </p>
                </div>
              </div>
              <div
                class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15"
              >
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-7-54"
                >
                  <p
                    class="MuiTypography-root-119 makeStyles-thinFont-256 MuiTypography-body1-121 MuiTypography-colorTextSecondary-145"
                  >
                    Non-boosted
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root-365 makeStyles-divider-247"
      />
      <div
        class="MuiGrid-root-13 makeStyles-amountsSection-248 MuiGrid-container-14"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-6-53"
        >
          <p
            class="MuiTypography-root-119 makeStyles-amountsMobile-251 MuiTypography-body1-121 MuiTypography-displayInline-147"
          >
            TVL: 
          </p>
          <div
            class="MuiBox-root-297 MuiBox-root-388"
          >
            <p
              class="MuiTypography-root-119 makeStyles-amountsMobile-251 MuiTypography-body1-121"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
        >
          <p
            class="MuiTypography-root-119 makeStyles-amountsMobile-251 MuiTypography-body1-121 MuiTypography-displayInline-147"
          >
            My Deposits: 
          </p>
          <div
            class="MuiBox-root-297 MuiBox-root-391"
          >
            <p
              class="MuiTypography-root-119 makeStyles-amountsMobile-251 MuiTypography-body1-121"
            >
              $-
            </p>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root-365 makeStyles-divider-247"
      />
      <div
        class="MuiGrid-root-13 makeStyles-actionButtonsMobile-249 MuiGrid-container-14"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-justify-content-xs-center-31"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-item-15"
          >
            <button
              class="MuiButtonBase-root-182 MuiButton-root-306 MuiButton-outlined-311 makeStyles-button-303 MuiButton-outlinedPrimary-312 MuiButton-disabled-319 WithStyles(ForwardRef(Button))-disabled-305 MuiButtonBase-disabled-183"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-307"
              >
                Deposit
              </span>
            </button>
          </div>
          <div
            class="MuiGrid-root-13 MuiGrid-item-15"
          >
            <button
              class="MuiButtonBase-root-182 MuiButton-root-306 MuiButton-contained-314 makeStyles-button-303 MuiButton-containedPrimary-315 MuiButton-disabled-319 WithStyles(ForwardRef(Button))-disabled-305 MuiButtonBase-disabled-183"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-307"
              >
                Withdraw
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Landing Renders tablet version correctly 1`] = `
<div>
  <div
    class="MuiContainer-root-5 WithStyles(ForwardRef(Container))-root-4 MuiContainer-maxWidthLg-11"
  >
    <div
      class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-justify-content-xs-center-31"
    >
      <div
        class="MuiGrid-root-13 WithStyles(ForwardRef(Grid))-root-116 WithStyles(ForwardRef(Grid))-root-117 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-align-items-xs-center-22 MuiGrid-grid-xs-12-59"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-10-57 MuiGrid-grid-md-6-81"
        >
          <div
            class="makeStyles-headerContainer-118"
          >
            <h6
              class="MuiTypography-root-119 MuiTypography-h6-129 MuiTypography-colorTextPrimary-144"
            >
              Test Bitcoin Strategies
            </h6>
            <p
              class="MuiTypography-root-119 MuiTypography-body2-120 MuiTypography-colorTextSecondary-145"
            >
              Snapshots are great. Landing looks good.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-13 MuiGrid-container-14"
    >
      <div
        class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-align-items-xs-center-22 MuiGrid-grid-xs-10-57"
      >
        <p
          class="MuiTypography-root-119 makeStyles-badgerOverviewValueText-2 makeStyles-badgerOverviewValueTitle-1 MuiTypography-body2-120"
        >
          My Assets:
        </p>
        <div
          class="MuiBox-root-297 MuiBox-root-363"
        >
          <p
            class="MuiTypography-root-119 makeStyles-badgerOverviewValueText-2 MuiTypography-body2-120"
          />
        </div>
      </div>
      <div
        class="MuiGrid-root-13 makeStyles-filterWidgetContainer-3 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-grid-xs-2-49"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-align-items-xs-center-22 MuiGrid-justify-content-xs-flex-end-32"
        >
          <button
            aria-label="Open Vaults Filters"
            class="MuiButtonBase-root-182 MuiIconButton-root-173 makeStyles-filterButton-203"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-181"
            >
              <img
                alt="vault filters"
                src="/assets/icons/vault-filters.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-392"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-13 makeStyles-mobileContainer-159 MuiGrid-container-14 MuiGrid-justify-content-xs-space-between-33"
    >
      <div
        class="MuiGrid-root-13 makeStyles-mobileColumn-160 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-align-items-xs-center-22 MuiGrid-grid-xs-6-53"
      >
        <p
          class="MuiTypography-root-119 makeStyles-title-150 MuiTypography-body2-120 MuiTypography-colorTextSecondary-145 MuiTypography-displayInline-147"
        >
          Vaults
        </p>
        <img
          alt="List description"
          class="makeStyles-sortInfoIcon-152"
          color="primary"
          src="/assets/icons/vault-sort-info.svg"
          title="A vault is a smart contract which hold specific tokens. It secures your crypto, while making your money work (e.g. rewards, APR...)"
        />
      </div>
      <div
        class="MuiGrid-root-13 makeStyles-mobileColumn-160 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-align-items-xs-center-22 MuiGrid-justify-content-xs-flex-end-32 MuiGrid-grid-xs-6-53"
      >
        <p
          class="MuiTypography-root-119 makeStyles-title-150 MuiTypography-body2-120 MuiTypography-colorTextSecondary-145"
        >
          APR
        </p>
        <img
          alt="What is APR?"
          class="makeStyles-sortInfoIcon-152"
          color="primary"
          src="/assets/icons/vault-sort-info.svg"
          title="An annual percentage rate (APR), is the yearly rate earned by staking in each vault."
        />
      </div>
    </div>
    <div
      class="MuiPaper-root-263 MuiCard-root-262 MuiGrid-root-13 makeStyles-mobileContainer-252 MuiGrid-container-14 MuiPaper-elevation1-267 MuiPaper-rounded-264"
    >
      <div
        class="MuiGrid-root-13 makeStyles-nameAndAprMobile-250 MuiGrid-container-14 MuiGrid-spacing-xs-2-37"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-12-59"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-container-14"
          >
            <div
              class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-align-items-xs-center-22"
            >
              <div
                class="MuiGrid-root-13 MuiGrid-grid-xs-auto-46"
              >
                <div
                  class="makeStyles-root-291"
                >
                  <img
                    alt="curve-renBTC-wBTC-sBTC logo"
                    class="makeStyles-position-364"
                    src="/assets/icons/curve-renbtc-wbtc-sbtc.svg"
                  />
                </div>
              </div>
              <div
                class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-direction-xs-column-17 MuiGrid-grid-xs-7-54"
              >
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15"
                />
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15"
                >
                  <span
                    class="MuiTypography-root-119 makeStyles-behavior-243 MuiTypography-caption-122"
                  >
                    Ecosystem Helper
                  </span>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-13 makeStyles-vaultNameMobile-258 MuiGrid-container-14 MuiGrid-direction-xs-column-17"
            >
              <div
                class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15"
              >
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-7-54"
                >
                  <h6
                    class="MuiTypography-root-119 makeStyles-vaultName-257 MuiTypography-subtitle1-130"
                  >
                    Convex
                     - 
                    Curve.fi renBTC/wBTC/sBTC
                  </h6>
                </div>
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
                >
                  <p
                    class="MuiTypography-root-119 makeStyles-apr-293 MuiTypography-body1-121 MuiTypography-colorTextPrimary-144"
                  >
                    0.25%
                  </p>
                </div>
              </div>
              <div
                class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15"
              >
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-7-54"
                >
                  <p
                    class="MuiTypography-root-119 makeStyles-thinFont-256 MuiTypography-body1-121 MuiTypography-colorTextSecondary-145"
                  >
                    Non-boosted
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root-365 makeStyles-divider-247"
      />
      <div
        class="MuiGrid-root-13 makeStyles-amountsSection-248 MuiGrid-container-14"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-6-53"
        >
          <p
            class="MuiTypography-root-119 makeStyles-amountsMobile-251 MuiTypography-body1-121 MuiTypography-displayInline-147"
          >
            TVL: 
          </p>
          <div
            class="MuiBox-root-297 MuiBox-root-374"
          >
            <p
              class="MuiTypography-root-119 makeStyles-amountsMobile-251 MuiTypography-body1-121"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
        >
          <p
            class="MuiTypography-root-119 makeStyles-amountsMobile-251 MuiTypography-body1-121 MuiTypography-displayInline-147"
          >
            My Deposits: 
          </p>
          <div
            class="MuiBox-root-297 MuiBox-root-377"
          >
            <p
              class="MuiTypography-root-119 makeStyles-amountsMobile-251 MuiTypography-body1-121"
            >
              $-
            </p>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root-365 makeStyles-divider-247"
      />
      <div
        class="MuiGrid-root-13 makeStyles-actionButtonsMobile-249 MuiGrid-container-14"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-justify-content-xs-center-31"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-item-15"
          >
            <button
              class="MuiButtonBase-root-182 MuiButton-root-306 MuiButton-outlined-311 makeStyles-button-303 MuiButton-outlinedPrimary-312 MuiButton-disabled-319 WithStyles(ForwardRef(Button))-disabled-305 MuiButtonBase-disabled-183"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-307"
              >
                Deposit
              </span>
            </button>
          </div>
          <div
            class="MuiGrid-root-13 MuiGrid-item-15"
          >
            <button
              class="MuiButtonBase-root-182 MuiButton-root-306 MuiButton-contained-314 makeStyles-button-303 MuiButton-containedPrimary-315 MuiButton-disabled-319 WithStyles(ForwardRef(Button))-disabled-305 MuiButtonBase-disabled-183"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-307"
              >
                Withdraw
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-263 MuiCard-root-262 MuiGrid-root-13 makeStyles-mobileContainer-252 MuiGrid-container-14 MuiPaper-elevation1-267 MuiPaper-rounded-264"
    >
      <div
        class="MuiGrid-root-13 makeStyles-nameAndAprMobile-250 MuiGrid-container-14 MuiGrid-spacing-xs-2-37"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-12-59"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-container-14"
          >
            <div
              class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-align-items-xs-center-22"
            >
              <div
                class="MuiGrid-root-13 MuiGrid-grid-xs-auto-46"
              >
                <div
                  class="makeStyles-root-291"
                >
                  <img
                    alt="BADGER logo"
                    class="makeStyles-position-378"
                    src="/assets/icons/badger.svg"
                  />
                </div>
              </div>
              <div
                class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-direction-xs-column-17 MuiGrid-grid-xs-7-54"
              >
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15"
                />
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15"
                >
                  <span
                    class="MuiTypography-root-119 makeStyles-behavior-243 MuiTypography-caption-122"
                  >
                    DCA
                  </span>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-13 makeStyles-vaultNameMobile-258 MuiGrid-container-14 MuiGrid-direction-xs-column-17"
            >
              <div
                class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15"
              >
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-7-54"
                >
                  <h6
                    class="MuiTypography-root-119 makeStyles-vaultName-257 MuiTypography-subtitle1-130"
                  >
                    Badger
                     - 
                    Badger
                  </h6>
                </div>
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
                >
                  <p
                    class="MuiTypography-root-119 makeStyles-apr-293 MuiTypography-body1-121 MuiTypography-colorTextPrimary-144"
                  >
                    8.17%
                  </p>
                </div>
              </div>
              <div
                class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15"
              >
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-7-54"
                >
                  <p
                    class="MuiTypography-root-119 makeStyles-thinFont-256 MuiTypography-body1-121 MuiTypography-colorTextSecondary-145"
                  >
                    Non-boosted
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root-365 makeStyles-divider-247"
      />
      <div
        class="MuiGrid-root-13 makeStyles-amountsSection-248 MuiGrid-container-14"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-6-53"
        >
          <p
            class="MuiTypography-root-119 makeStyles-amountsMobile-251 MuiTypography-body1-121 MuiTypography-displayInline-147"
          >
            TVL: 
          </p>
          <div
            class="MuiBox-root-297 MuiBox-root-381"
          >
            <p
              class="MuiTypography-root-119 makeStyles-amountsMobile-251 MuiTypography-body1-121"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
        >
          <p
            class="MuiTypography-root-119 makeStyles-amountsMobile-251 MuiTypography-body1-121 MuiTypography-displayInline-147"
          >
            My Deposits: 
          </p>
          <div
            class="MuiBox-root-297 MuiBox-root-384"
          >
            <p
              class="MuiTypography-root-119 makeStyles-amountsMobile-251 MuiTypography-body1-121"
            >
              $-
            </p>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root-365 makeStyles-divider-247"
      />
      <div
        class="MuiGrid-root-13 makeStyles-actionButtonsMobile-249 MuiGrid-container-14"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-justify-content-xs-center-31"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-item-15"
          >
            <button
              class="MuiButtonBase-root-182 MuiButton-root-306 MuiButton-outlined-311 makeStyles-button-303 MuiButton-outlinedPrimary-312 MuiButton-disabled-319 WithStyles(ForwardRef(Button))-disabled-305 MuiButtonBase-disabled-183"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-307"
              >
                Deposit
              </span>
            </button>
          </div>
          <div
            class="MuiGrid-root-13 MuiGrid-item-15"
          >
            <button
              class="MuiButtonBase-root-182 MuiButton-root-306 MuiButton-contained-314 makeStyles-button-303 MuiButton-containedPrimary-315 MuiButton-disabled-319 WithStyles(ForwardRef(Button))-disabled-305 MuiButtonBase-disabled-183"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-307"
              >
                Withdraw
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root-263 MuiCard-root-262 MuiGrid-root-13 makeStyles-mobileContainer-252 MuiGrid-container-14 MuiPaper-elevation1-267 MuiPaper-rounded-264"
    >
      <div
        class="MuiGrid-root-13 makeStyles-nameAndAprMobile-250 MuiGrid-container-14 MuiGrid-spacing-xs-2-37"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-12-59"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-container-14"
          >
            <div
              class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-align-items-xs-center-22"
            >
              <div
                class="MuiGrid-root-13 MuiGrid-grid-xs-auto-46"
              >
                <div
                  class="makeStyles-root-291"
                >
                  <img
                    alt="DIGG logo"
                    class="makeStyles-position-385"
                    src="/assets/icons/digg.svg"
                  />
                </div>
              </div>
              <div
                class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-item-15 MuiGrid-direction-xs-column-17 MuiGrid-grid-xs-7-54"
              >
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15"
                />
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15"
                />
              </div>
            </div>
            <div
              class="MuiGrid-root-13 makeStyles-vaultNameMobile-258 MuiGrid-container-14 MuiGrid-direction-xs-column-17"
            >
              <div
                class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15"
              >
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-7-54"
                >
                  <h6
                    class="MuiTypography-root-119 makeStyles-vaultName-257 MuiTypography-subtitle1-130"
                  >
                    Badger
                     - 
                    Digg
                  </h6>
                </div>
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
                >
                  <p
                    class="MuiTypography-root-119 makeStyles-apr-293 MuiTypography-body1-121 MuiTypography-colorTextPrimary-144"
                  >
                    8.17%
                  </p>
                </div>
              </div>
              <div
                class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-item-15"
              >
                <div
                  class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-7-54"
                >
                  <p
                    class="MuiTypography-root-119 makeStyles-thinFont-256 MuiTypography-body1-121 MuiTypography-colorTextSecondary-145"
                  >
                    Non-boosted
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root-365 makeStyles-divider-247"
      />
      <div
        class="MuiGrid-root-13 makeStyles-amountsSection-248 MuiGrid-container-14"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-6-53"
        >
          <p
            class="MuiTypography-root-119 makeStyles-amountsMobile-251 MuiTypography-body1-121 MuiTypography-displayInline-147"
          >
            TVL: 
          </p>
          <div
            class="MuiBox-root-297 MuiBox-root-388"
          >
            <p
              class="MuiTypography-root-119 makeStyles-amountsMobile-251 MuiTypography-body1-121"
            />
          </div>
        </div>
        <div
          class="MuiGrid-root-13 MuiGrid-item-15 MuiGrid-grid-xs-true-47"
        >
          <p
            class="MuiTypography-root-119 makeStyles-amountsMobile-251 MuiTypography-body1-121 MuiTypography-displayInline-147"
          >
            My Deposits: 
          </p>
          <div
            class="MuiBox-root-297 MuiBox-root-391"
          >
            <p
              class="MuiTypography-root-119 makeStyles-amountsMobile-251 MuiTypography-body1-121"
            >
              $-
            </p>
          </div>
        </div>
      </div>
      <hr
        class="MuiDivider-root-365 makeStyles-divider-247"
      />
      <div
        class="MuiGrid-root-13 makeStyles-actionButtonsMobile-249 MuiGrid-container-14"
      >
        <div
          class="MuiGrid-root-13 MuiGrid-container-14 MuiGrid-spacing-xs-2-37 MuiGrid-justify-content-xs-center-31"
        >
          <div
            class="MuiGrid-root-13 MuiGrid-item-15"
          >
            <button
              class="MuiButtonBase-root-182 MuiButton-root-306 MuiButton-outlined-311 makeStyles-button-303 MuiButton-outlinedPrimary-312 MuiButton-disabled-319 WithStyles(ForwardRef(Button))-disabled-305 MuiButtonBase-disabled-183"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-307"
              >
                Deposit
              </span>
            </button>
          </div>
          <div
            class="MuiGrid-root-13 MuiGrid-item-15"
          >
            <button
              class="MuiButtonBase-root-182 MuiButton-root-306 MuiButton-contained-314 makeStyles-button-303 MuiButton-containedPrimary-315 MuiButton-disabled-319 WithStyles(ForwardRef(Button))-disabled-305 MuiButtonBase-disabled-183"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="MuiButton-label-307"
              >
                Withdraw
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
